[tool.poetry]
name = "test-repo"
version = "0.1"
description = ""
authors = ["Alex Cryptobro <alex@cryptobro.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"